tests/tc/pos/upcast-04.js

/*@ simple :: (x: number + boolean ) => number + boolean + { } */
function simple(x) {
  return x;
}


