tests/tc/neg/test0-bad.js
/*@ foo :: () => number */
function foo()
{
  var x = 0;
  var y = x + 1;
  return (10 < y);
}


